# AlphaML

./: .gitignore  CMakeLists.txt  compile_commands.json  dirs.py
.cache/clangd/index/: Activation.cpp.5A02B0DF8A4908FA.idx  Activation.h.15E0E652C7343364.idx  Adam.cpp.4E1A867FB44DE635.idx  Adam.h.190309B01ABA5FCB.idx  CrossEntropyLoss.cpp.B34587AD5607B321.idx  CrossEntropyLoss.h.AC015380A3232EDE.idx  Dataset.cpp.B06EAFF566C1F600.idx  Dense.cpp.606FDB1C2B225C9A.idx  Dense.h.A552A904D2DCFAAF.idx  Layer.h.AE2BB5A8E1D89627.idx  Loss.h.803E9359F274FD8F.idx  MSELoss.cpp.5B0DFA5007A65BA4.idx  Optimizer.h.0E7E5822E13B2D0D.idx  RandomDataGenerator.cpp.34D557D1F4D5C229.idx  SGD.cpp.D2DCEBFEB593F6ED.idx  Tensor.cpp.36C9B1E716E3B2AD.idx  Tensor.h.106EC2D4F8B55013.idx  Utils.cpp.B090589BBB9917A1.idx  Utils.h.96AB13159CE5656F.idx  flatten.h.2FDF9ED166BCDC08.idx  main.cpp.5D7C02F72AF596C5.idx  parent.cpp.01472ECCBBE9918F.idx  sequential.h.29798CC7C7BB115E.idx
include/data/: Dataset.h
include/layers/: Activation.h  Dense.h  Layer.h  flatten.h
include/losses/: CrossEntropyLoss.h  Loss.h  MSELoss.h
include/optimizers/: Adam.h  Optimizer.h  SGD.h
include/utils/: RandomDataGenerator.h  Tensor.h  Train.h  Utils.h  color_text.h  sequential.h
src/: main  main.cpp
src/data/: Dataset.cpp
src/layers/: Activation.cpp  Dense.cpp  Linear.cpp
src/losses/: CrossEntropyLoss.cpp  MSELoss.cpp
src/optimizers/: Adam.cpp  SGD.cpp
src/utils/: Tensor.cpp  Utils.cpp
test/pythonVersion/: main.ipynb
